--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,36 @@
 .App-link {
   color: #09d3ac;
 }
+
+table {
+  width: 300px;
+  text-align: center;
+}
+
+table td {
+  border: 1px solid maroon;
+}
+table th {
+  cursor: pointer;
+}
+table th:hover {
+  background-color: gainsboro;
+}
+
+#celsius-toggle {
+  position: absolute;
+  top: 5px;
+  left: 15%;
+}
+
+label {
+  display: inline-block;
+  padding-left: 14px;
+  padding-right: 14px;
+  margin: 14px;
+}
+
+input[type="radio"] {
+  width: 1.4em;
+  height: 1.4em;
+}
